Add greeting paragraph to index page

--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,7 @@
             <a href="carrito.html" class="btn btn-outline-dark">Carrito</a>
         </div>
     </header>
-
+<p>hola</p>
     <main class="container text-center">
         <div class="img_principal my-4">
             <img src="/img/img_ppal.png" class="img-fluid" alt="signo">
