--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Hoja de estilos personalizada -->
-  <link rel="stylesheet" href="/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="/css/styles.css" />
   <title>Carrito - S?gno</title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
   <!-- Header -->
   <header class="container d-flex justify-content-between align-items-center py-3">
     <div class="d-flex gap-2">
       <a href="nosotros.html" class="btn btn-outline-dark">Nosotros</a>
       <a href="tienda.html" class="btn btn-outline-dark">Tienda</a>
     </div>
-    <h1 class="text-center">
-      <a href="index.html" class="text-decoration-none">S?gno</a>
+    <h1 class="m-0 text-center">
+      <a href="index.html" class="text-decoration-none text-dark">S?gno</a>
     </h1>
     <div class="d-flex gap-2">
       <a href="login.html" class="btn btn-outline-dark">Log in</a>
@@ -26,39 +26,40 @@
   </header>
 
   <!-- Main -->
-  <main class="container my-4">
+  <main class="container my-4 flex-grow-1">
     <div class="row">
       <div class="col-12 mb-4">
         <h2 class="text-center">Tu Carrito</h2>
       </div>
     </div>
 
-    <!-- Productos en el carrito -->
-    <div class="row g-3">
+    <div class="row g-4">
       <!-- Producto 1 -->
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="/img/producto 1.jpg" class="card-img-top img-fluid" alt="Short pollera handmade S?gno">
+          <img src="/img/producto 1.jpg" class="card-img-top img-fluid" alt="Short pollera handmade S?gno" />
           <div class="card-body">
             <h5 class="card-title">Short pollera handmade S?gno</h5>
             <p class="card-text">$30.000</p>
           </div>
         </div>
       </div>
+
       <!-- Producto 2 -->
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="/img/producto 2.jpg" class="card-img-top img-fluid" alt="Campera de cuero S?gno">
+          <img src="/img/producto 2.jpg" class="card-img-top img-fluid" alt="Campera de cuero S?gno" />
           <div class="card-body">
             <h5 class="card-title">Campera de cuero S?gno</h5>
             <p class="card-text">$70.000</p>
           </div>
         </div>
       </div>
+
       <!-- Producto 3 -->
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="/img/producto 3.jpg" class="card-img-top img-fluid" alt="Monedero edición limitada S?gno">
+          <img src="/img/producto 3.jpg" class="card-img-top img-fluid" alt="Monedero edición limitada S?gno" />
           <div class="card-body">
             <h5 class="card-title">Monedero edición limitada S?gno</h5>
             <p class="card-text">$20.000</p>
@@ -67,7 +68,7 @@
       </div>
     </div>
 
-    <!-- Sección de Total y Pago -->
+    <!-- Total -->
     <div class="row mt-5">
       <div class="col-12 text-center">
         <h4>Total a Pagar</h4>
@@ -87,15 +88,13 @@
         <li>Dirección: Concepción, Tucumán</li>
       </ul>
     </div>
-    <div>
-      <h2>S?gno</h2>
-    </div>
+    <h2 class="m-0 text-center">S?gno</h2>
     <div>
       <a href="index.html" class="btn btn-danger">Arrepentirse</a>
     </div>
   </footer>
 
-  <!-- Bootstrap JS Bundle -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
