--- a/pages/login.html
+++ b/pages/login.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="/css/styles.css" />
   <title>Log in - S?gno</title>
 </head>
-<body class="body-login">
+<body class="d-flex flex-column min-vh-100 body-login">
   <!-- Header -->
   <header class="container d-flex justify-content-between align-items-center py-3">
     <div class="d-flex gap-2">
@@ -24,21 +25,21 @@
     </div>
   </header>
 
-  <!-- Main Login Section -->
-  <main class="container my-5" >
+  <!-- Main -->
+  <main class="container my-5 flex-grow-1">
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-4">
-        <div class="card shadow">
+        <div class="card shadow-sm">
           <div class="card-body">
             <h2 class="card-title text-center mb-4">Iniciar sesión</h2>
             <form class="form-login">
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" id="email" name="email" class="form-control" placeholder="Email" required>
+                <input type="email" id="email" name="email" class="form-control" placeholder="Email" required />
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
+                <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required />
               </div>
               <div class="d-grid">
                 <button type="submit" class="btn btn-primary">Iniciar sesión</button>
@@ -54,21 +55,19 @@
   <footer class="container d-flex justify-content-between align-items-center py-4 border-top bg-light">
     <div>
       <h3>Contactos</h3>
-      <ul class="list-unstyled">
+      <ul class="list-unstyled mb-0">
         <li>Email: ejemplo@correo.com</li>
         <li>Teléfono: +54 381 555 1234</li>
         <li>Dirección: Concepción, Tucumán</li>
       </ul>
     </div>
-    <div>
-      <h2>S?gno</h2>
-    </div>
+    <h2 class="m-0 text-center">S?gno</h2>
     <div>
       <a href="index.html" class="btn btn-danger">Arrepentirse</a>
     </div>
   </footer>
 
-  <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
