--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="/css/styles.css" />
   <title>Nosotros - S?gno</title>
 </head>
-<body class="bg-light">
+<body class="bg-light d-flex flex-column min-vh-100">
   <!-- Header -->
   <header class="container d-flex justify-content-between align-items-center py-3">
     <div class="d-flex gap-2">
@@ -24,47 +25,42 @@
     </div>
   </header>
 
-  <!-- Main Nosotros -->
-  <main class="container my-5">
+  <!-- Main -->
+  <main class="container my-5 flex-grow-1">
     <div class="row align-items-center">
       <!-- Imagen de la diseñadora -->
-      <div class="col-md-6">
-        <img src="/img/designer.jpg" class="img-fluid rounded" alt="diseñadora">
+      <div class="col-md-6 text-center mb-4 mb-md-0">
+        <img src="/img/designer.jpg" class="img-fluid rounded" alt="diseñadora" />
       </div>
       <!-- Información de la diseñadora -->
       <div class="col-md-6">
         <div class="ps-md-4">
           <h1 class="fs-3">Candelaria Rojano Sancho Miñano</h1>
           <p>
-            Signo simboliza un cambio, una señal de evolución hacia un futuro más consciente y responsable con el medio ambiente.
-            Cada prenda lleva una nueva interpretación de lo que fue, transformando textiles y prendas olvidadas en piezas únicas con estilo y propósito.
-            "Signo" refleja un compromiso con la autenticidad y la sostenibilidad, invitando a las personas a vestirse con la intención de marcar una diferencia positiva en el mundo.
-            Como cada signo en el lenguaje tiene un significado, cada prenda cuenta una historia de renovación y transformación.
+            Signo simboliza un cambio, una señal de evolución hacia un futuro más consciente y responsable con el medio ambiente. Cada prenda lleva una nueva interpretación de lo que fue, transformando textiles y prendas olvidadas en piezas únicas con estilo y propósito. “Signo” refleja un compromiso con la autenticidad y la sostenibilidad, invitando a las personas a vestirse con la intención de marcar una diferencia positiva en el mundo. Como cada signo en el lenguaje tiene un significado, cada prenda cuenta una historia de renovación y transformación.
           </p>
         </div>
       </div>
     </div>
   </main>
-  
+
   <!-- Footer -->
   <footer class="container d-flex justify-content-between align-items-center py-4 border-top">
     <div>
       <h3>Contactos</h3>
-      <ul class="list-unstyled">
+      <ul class="list-unstyled mb-0">
         <li>Email: ejemplo@correo.com</li>
         <li>Teléfono: +54 381 555 1234</li>
         <li>Dirección: Concepción, Tucumán</li>
       </ul>
     </div>
-    <div>
-      <h2>S?gno</h2>
-    </div>
+    <h2 class="m-0 text-center">S?gno</h2>
     <div>
       <a href="index.html" class="btn btn-danger">Arrepentirse</a>
     </div>
   </footer>
-  
-  <!-- Bootstrap JS Bundle -->
+
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
