--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="/css/styles.css" />
   <title>Tienda - S?gno</title>
 </head>
-<body class="bg-light">
+<body class="bg-light d-flex flex-column min-vh-100">
   <!-- Header -->
   <header class="container d-flex justify-content-between align-items-center py-3">
     <div class="d-flex gap-2">
@@ -24,13 +25,13 @@
     </div>
   </header>
 
-  <!-- Main Tienda -->
-  <main class="container my-5">
-    <div class="row">
-      <!-- Producto 1 -->
-      <div class="col-md-4 col-lg-3 mb-4">
+  <!-- Main -->
+  <main class="container my-5 flex-grow-1">
+    <div class="row g-4">
+      <!-- Productos -->
+      <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
         <div class="card h-100">
-          <img src="/img/producto 1.jpg" class="card-img-top" alt="Short-pollera handmade S?gno">
+          <img src="/img/producto 1.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Short-pollera handmade S?gno</h5>
             <p class="card-text">$30.000</p>
@@ -38,57 +39,72 @@
           </div>
         </div>
       </div>
-      <!-- Producto 2 -->
-      <div class="col-md-4 col-lg-3 mb-4">
+            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
         <div class="card h-100">
-          <img src="/img/producto 2.jpg" class="card-img-top" alt="Campera de cuero S?gno">
+          <img src="/img/producto 2.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Campera de cuero S?gno</h5>
-            <p class="card-text">$70.000</p>
+            <h5 class="card-title">Campera de cuero vacunoS?gno</h5>
+            <p class="card-text">$30.000</p>
             <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
           </div>
         </div>
       </div>
-      <!-- Producto 3 -->
-      <div class="col-md-4 col-lg-3 mb-4">
+            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
         <div class="card h-100">
-          <img src="/img/producto 3.jpg" class="card-img-top" alt="Monedero edición limitada S?gno">
+          <img src="/img/producto 3.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Monedero edición limitada S?gno</h5>
-            <p class="card-text">$20.000</p>
+            <h5 class="card-title">Monedero handmade S?gno</h5>
+            <p class="card-text">$30.000</p>
             <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
           </div>
         </div>
       </div>
-      <!-- Producto 4 -->
-      <div class="col-md-4 col-lg-3 mb-4">
+            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
         <div class="card h-100">
-          <img src="/img/producto 4.jpg" class="card-img-top" alt="Falda total black S?gno">
+          <img src="/img/producto 4.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Falda total black S?gno</h5>
-            <p class="card-text">$50.000</p>
+            <h5 class="card-title">top handmade S?gno</h5>
+            <p class="card-text">$30.000</p>
             <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
           </div>
         </div>
       </div>
-      <!-- Producto 5 -->
-      <div class="col-md-4 col-lg-3 mb-4">
+            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
         <div class="card h-100">
-          <img src="/img/producto 5.jpg" class="card-img-top" alt="Top total black S?gno">
+          <img src="/img/producto 5.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Top total black S?gno</h5>
-            <p class="card-text">$50.000</p>
+            <h5 class="card-title">top de cuero handmade S?gno</h5>
+            <p class="card-text">$30.000</p>
             <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
           </div>
         </div>
       </div>
-      <!-- Producto 6 -->
-      <div class="col-md-4 col-lg-3 mb-4">
+            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
         <div class="card h-100">
-          <img src="/img/producto 6.jpg" class="card-img-top" alt="Campera de cuero TotalBlack S?gno">
+          <img src="/img/producto 6.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Campera de cuero TotalBlack S?gno</h5>
-            <p class="card-text">$150.000</p>
+            <h5 class="card-title">Campera de cuero Allblack handmade S?gno</h5>
+            <p class="card-text">$30.000</p>
+            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
+          </div>
+        </div>
+      </div>
+            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
+        <div class="card h-100">
+          <img src="/img/producto 7.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Tapado de piel S?gno</h5>
+            <p class="card-text">$30.000</p>
+            <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
+          </div>
+        </div>
+      </div>
+            <div class="col-md-4 col-lg-3" *ngFor="let producto of productos">
+        <div class="card h-100">
+          <img src="/img/producto 8.jpg" class="card-img-top" alt="Short-pollera handmade S?gno" />
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Campera de hilo S?gno</h5>
+            <p class="card-text">$30.000</p>
             <a href="carrito.html" class="btn btn-primary mt-auto">Agregar a carrito</a>
           </div>
         </div>
@@ -100,21 +116,19 @@
   <footer class="container d-flex justify-content-between align-items-center py-4 border-top">
     <div>
       <h3>Contactos</h3>
-      <ul class="list-unstyled">
+      <ul class="list-unstyled mb-0">
         <li>Email: ejemplo@correo.com</li>
         <li>Teléfono: +54 381 555 1234</li>
         <li>Dirección: Concepción, Tucumán</li>
       </ul>
     </div>
-    <div>
-      <h2>S?gno</h2>
-    </div>
+    <h2 class="m-0 text-center">S?gno</h2>
     <div>
       <a href="index.html" class="btn btn-danger">Arrepentirse</a>
     </div>
   </footer>
 
-  <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
