Solucion de imagines en index y pages

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     </div>
     <div class="row g-4">
       <div class="col-md-4">
-        <img class="img-fluid rounded" src="img/mujeres.jpg" alt="mujeres" />
+        <img class="img-fluid rounded" src="/img/mujeres.jpg" alt="mujeres" />
       </div>
       <div class="col-md-4">
-        <img class="img-fluid rounded" src="img/niños.jpg" alt="niños" />
+        <img class="img-fluid rounded" src="/img/niños.jpg" alt="niños" />
       </div>
       <div class="col-md-4">
-        <img class="img-fluid rounded" src="img/hombres.jpg" alt="hombres" />
+        <img class="img-fluid rounded" src="/img/hombres.jpg" alt="hombres" />
       </div>
     </div>
   </main>
