--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -33,16 +33,34 @@
       <!-- Ejemplo de producto en el carrito -->
       <div class="product">
         <div class="product-image">
-          <img src="../img/producto1.jpg" alt="Producto 1" class="img-fluid" style="max-width:100px;">
+          <img src="../img/producto 1.jpg" alt="Producto 1" class="img-fluid" style="max-width:100px;">
         </div>
         <div class="product-details">
-          <p>Producto 1</p>
+          <p>SHORT POLLERA GREY</p>
           <p>$1000</p>
         </div>
         <button class="btn btn-danger">Eliminar</button>
       </div>
-      <!-- Más productos aquí -->
-
+      <div class="product">
+        <div class="product-image">
+          <img src="../img/producto 2.jpg" alt="Producto 2" class="img-fluid" style="max-width:100px;">
+        </div>
+        <div class="product-details">
+          <p>CAMPERA DE CUERO</p>
+          <p>$1200</p>
+        </div>
+        <button class="btn btn-danger">Eliminar</button>
+      </div>
+      <div class="product">
+        <div class="product-image">
+          <img src="../img/producto 3.jpg" alt="Producto 3" class="img-fluid" style="max-width:100px;">
+        </div>
+        <div class="product-details">
+          <p>MONEDERO</p>
+          <p>$1500</p>
+        </div>
+        <button class="btn btn-danger">Eliminar</button>
+      </div>
       <div class="total mt-4">
         <span>Total:</span>
         <span>$1000</span>
