--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,7 +28,7 @@
   </nav>
 
   <main class="container my-5 flex-grow-1">
-    <h1 class="mb-4">Sobre Nosotros</h1>
+    <h1 class="mb-4">Designer @by.cande__</h1>
     <div class="main_nosotros">
       <div class="info_designer">
         <img src="../img/designer.jpg" alt="Diseñador" class="designer_img mb-3">
