--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -32,25 +32,41 @@
     <div class="tienda-grid-container">
       <!-- Ejemplo de producto -->
       <div class="tienda-product">
-        <img src="../img/producto1.jpg" alt="Producto 1" class="tienda-product-image">
-        <h5>Producto 1</h5>
+        <img src="../img/producto 1.jpg" alt="Producto 1" class="tienda-product-image">
+        <h5>SHORT POLLERA GREY</h5>
         <p>$1000</p>
         <button class="btn btn-dark">Agregar al carrito</button>
       </div>
       <div class="tienda-product">
-        <img src="../img/producto2.jpg" alt="Producto 2" class="tienda-product-image">
-        <h5>Producto 2</h5>
+        <img src="../img/producto 2.jpg" alt="Producto 2" class="tienda-product-image">
+        <h5>CAMPERA DE CUERO</h5>
         <p>$1200</p>
         <button class="btn btn-dark">Agregar al carrito</button>
       </div>
       <div class="tienda-product">
-        <img src="../img/producto3.jpg" alt="Producto 3" class="tienda-product-image">
-        <h5>Producto 3</h5>
+        <img src="../img/producto 3.jpg" alt="Producto 3" class="tienda-product-image">
+        <h5>MONEDERO</h5>
         <p>$900</p>
         <button class="btn btn-dark">Agregar al carrito</button>
       </div>
-      <!-- Agrega más productos según necesites -->
-    </div>
+      <div class="tienda-product">
+        <img src="../img/producto 4.jpg" alt="Producto 4" class="tienda-product-image">
+        <h5>TOP BLACK</h5>
+        <p>$1100</p>
+        <button class="btn btn-dark">Agregar al carrito</button>
+      </div>
+      <div class="tienda-product">
+        <img src="../img/producto 5.jpg" alt="Producto 5" class="tienda-product-image">
+        <h5>MINI TOP DARK</h5>
+        <p>$1300</p>
+        <button class="btn btn-dark">Agregar al carrito</button>
+      </div>
+      <div class="tienda-product">
+        <img src="../img/producto 6.jpg" alt="Producto 6" class="tienda-product-image">
+        <h5>CAMPERA DE CUERO BLACK</h5>
+        <p>$1400</p>
+        <button class="btn btn-dark">Agregar al carrito</button>
+      </div>
   </main>
 
   <footer class="footer d-flex justify-content-between align-items-center py-4 border-top" style="background-color:#000; color:#fff;">
