--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Bienvenido a SIGNO, una marca de moda circular que transforma prendas recicladas en piezas únicas. Explora nuestra tienda y descubre la moda sostenible." />
+  <meta name="keywords" content="moda circular, ropa reciclada, sostenibilidad, SIGNO, tienda de moda, prendas únicas" />
+  <meta name="author" content="SIGNO Team" />
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Estilos personalizados -->
