--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Bienvenido a la tienda de SIGNO, donde encontrarás moda circular y prendas únicas. Explora nuestra colección y agrega tus favoritos al carrito." />
+  <meta name="keywords" content="tienda SIGNO, moda circular, ropa reciclada, prendas únicas, tienda online" />
+  <meta name="author" content="SIGNO Team" />
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../css/styles.css" />
