--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       </button>
       <div class="collapse navbar-collapse" id="mainNavbar">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/tienda.html">Tienda</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/login.html">Log in</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/carrito.html">Carrito</a></li>
+            <li class="nav-item"><a class="nav-link" href="/pages/nosotros.html">Nosotros</a></li>
+            <li class="nav-item"><a class="nav-link" href="/pages/tienda.html">Tienda</a></li>
+            <li class="nav-item"><a class="nav-link" href="/pages/login.html">Log in</a></li>
+            <li class="nav-item"><a class="nav-link" href="/pages/carrito.html">Carrito</a></li>
         </ul>
       </div>
     </div>
