--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
   <title>Inicio - SIGNO</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -22,10 +22,10 @@
         </button>
       <div class="collapse navbar-collapse" id="mainNavbar">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="/pages/nosotros.html">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="/pages/tienda.html">Tienda</a></li>
-            <li class="nav-item"><a class="nav-link" href="/pages/login.html">Log in</a></li>
-            <li class="nav-item"><a class="nav-link" href="/pages/carrito.html">Carrito</a></li>
+            <li class="nav-item"><a class="nav-link" href="./pages/nosotros.html">Nosotros</a></li>
+            <li class="nav-item"><a class="nav-link" href="./pages/tienda.html">Tienda</a></li>
+            <li class="nav-item"><a class="nav-link" href="./pages/login.html">Log in</a></li>
+            <li class="nav-item"><a class="nav-link" href="./pages/carrito.html">Carrito</a></li>
         </ul>
       </div>
     </div>
@@ -45,13 +45,13 @@
     </div>
     <div class="row g-4">
       <div class="col-md-4">
-        <img class="img-fluid rounded" src="/img/mujeres.jpg" alt="mujeres" />
+        <img class="img-fluid rounded" src="./img/mujeres.jpg" alt="mujeres" />
       </div>
       <div class="col-md-4">
-        <img class="img-fluid rounded" src="/img/niños.jpg" alt="niños" />
+        <img class="img-fluid rounded" src="./img/niños.jpg" alt="niños" />
       </div>
       <div class="col-md-4">
-        <img class="img-fluid rounded" src="/img/hombres.jpg" alt="hombres" />
+        <img class="img-fluid rounded" src="./img/hombres.jpg" alt="hombres" />
       </div>
     </div>
   </main>
